--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             ausgabe = document.getElementById("meinAbsatz")
             input = document.getElementById("area")
             banana = document.getElementById("banana")
-            ausgabe.innerText = banana + " Bananen sind " + input.value * 12 + " Kirschen"
+            ausgabe.innerText = input + " Bananen sind " + input.value * 12 + " Kirschen"
         }
 
         if('serviceWorker' in navigator) {
