--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         function calc(){
             ausgabe = document.getElementById("meinAbsatz")
             input = document.getElementById("area")
-            ausgabe.innerText = input.innerText + " Bananen sind " + input.value * 2 + " Kirschen"
+            ausgabe.innerText = input.value + " Bananen sind " + input.value * 2 + " Kirschen"
         }
 
         if('serviceWorker' in navigator) {
